Update : ch05_update_class.ipynb v1

--- a/ch05_update1_class.ipynb
+++ b/ch05_update1_class.ipynb
@@ -949,6 +949,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <apply(함수) >: 어떤 함수을 시리즈에 적용하기 위한 함수!!!!!\n",
+    "    1) apply(func) - Series의 데이터에 func 함수를 적용\n",
+    "    2) apply(lambda X: func(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 함수 정의 : sample 값에서 60 이상이면 pass, 60 미만이면 fail로 변경하는 함수\n",
+    "def pass_fail(val):\n",
+    "    if val >= 60:\n",
+    "        return 'pass'\n",
+    "    else:\n",
+    "        return 'fail'\n",
+    "\n",
+    "# 2. 사용자 정의 함수을 시리즈에 적용\n",
+    "result = sample.apply(pass_fail)\n",
+    "type(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
