--- a/python_basic_2-main/python_basic_2-main/ch06_updated_class.ipynb
+++ b/python_basic_2-main/python_basic_2-main/ch06_updated_class.ipynb
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1133,9 +1133,9 @@
      "evalue": "'utf-8' codec can't decode byte 0xbd in position 95: invalid start byte",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Series, DataFrame\n\u001b[1;32m----> 4\u001b[0m tables \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_html\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://finance.naver.com/sise/sise_market_sum.naver\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mtype\u001b[39m(tables)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mlen\u001b[39m(tables) \u001b[38;5;66;03m# 1\u001b[39;00m\n",
+      "\u001b[1;31m-------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Series, DataFrame\n\u001b[1;32m----> 4\u001b[0m tables \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_html\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://finance.naver.com/sise/sise_market_sum.naver\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mtype\u001b[39m(tables)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mlen\u001b[39m(tables) \u001b[38;5;66;03m# 1\u001b[39;00m\n",
       "File \u001b[1;32mC:\\Python39\\lib\\site-packages\\pandas\\io\\html.py:1246\u001b[0m, in \u001b[0;36mread_html\u001b[1;34m(io, match, flavor, header, index_col, skiprows, attrs, parse_dates, thousands, encoding, decimal, converters, na_values, keep_default_na, displayed_only, extract_links, dtype_backend, storage_options)\u001b[0m\n\u001b[0;32m   1230\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(io, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28many\u001b[39m(\n\u001b[0;32m   1231\u001b[0m     [\n\u001b[0;32m   1232\u001b[0m         is_file_like(io),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1236\u001b[0m     ]\n\u001b[0;32m   1237\u001b[0m ):\n\u001b[0;32m   1238\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m   1239\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPassing literal html to \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mread_html\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is deprecated and \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1240\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwill be removed in a future version. To read from a \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1243\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39mfind_stack_level(),\n\u001b[0;32m   1244\u001b[0m     )\n\u001b[1;32m-> 1246\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_parse\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1247\u001b[0m \u001b[43m    \u001b[49m\u001b[43mflavor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mflavor\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1248\u001b[0m \u001b[43m    \u001b[49m\u001b[43mio\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mio\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1249\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmatch\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmatch\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1250\u001b[0m \u001b[43m    \u001b[49m\u001b[43mheader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mheader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1251\u001b[0m \u001b[43m    \u001b[49m\u001b[43mindex_col\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex_col\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1252\u001b[0m \u001b[43m    \u001b[49m\u001b[43mskiprows\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mskiprows\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1253\u001b[0m \u001b[43m    \u001b[49m\u001b[43mparse_dates\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mparse_dates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1254\u001b[0m \u001b[43m    \u001b[49m\u001b[43mthousands\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mthousands\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1255\u001b[0m \u001b[43m    \u001b[49m\u001b[43mattrs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mattrs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1256\u001b[0m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1257\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdecimal\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdecimal\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1258\u001b[0m \u001b[43m    \u001b[49m\u001b[43mconverters\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconverters\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1259\u001b[0m \u001b[43m    \u001b[49m\u001b[43mna_values\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mna_values\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1260\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkeep_default_na\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeep_default_na\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1261\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdisplayed_only\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdisplayed_only\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1262\u001b[0m \u001b[43m    \u001b[49m\u001b[43mextract_links\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextract_links\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1263\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdtype_backend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype_backend\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1264\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1265\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mC:\\Python39\\lib\\site-packages\\pandas\\io\\html.py:1009\u001b[0m, in \u001b[0;36m_parse\u001b[1;34m(flavor, io, match, attrs, encoding, displayed_only, extract_links, storage_options, **kwargs)\u001b[0m\n\u001b[0;32m   1007\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1008\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m retained \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m  \u001b[38;5;66;03m# for mypy\u001b[39;00m\n\u001b[1;32m-> 1009\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m retained\n\u001b[0;32m   1011\u001b[0m ret \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m   1012\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m table \u001b[38;5;129;01min\u001b[39;00m tables:\n",
       "File \u001b[1;32mC:\\Python39\\lib\\site-packages\\pandas\\io\\html.py:989\u001b[0m, in \u001b[0;36m_parse\u001b[1;34m(flavor, io, match, attrs, encoding, displayed_only, extract_links, storage_options, **kwargs)\u001b[0m\n\u001b[0;32m    978\u001b[0m p \u001b[38;5;241m=\u001b[39m parser(\n\u001b[0;32m    979\u001b[0m     io,\n\u001b[0;32m    980\u001b[0m     compiled_match,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    985\u001b[0m     storage_options,\n\u001b[0;32m    986\u001b[0m )\n\u001b[0;32m    988\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 989\u001b[0m     tables \u001b[38;5;241m=\u001b[39m \u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse_tables\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    990\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m caught:\n\u001b[0;32m    991\u001b[0m     \u001b[38;5;66;03m# if `io` is an io-like object, check if it's seekable\u001b[39;00m\n\u001b[0;32m    992\u001b[0m     \u001b[38;5;66;03m# and try to rewind it before trying the next parser\u001b[39;00m\n\u001b[0;32m    993\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(io, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseekable\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m io\u001b[38;5;241m.\u001b[39mseekable():\n",
@@ -2213,7 +2213,8 @@
    ],
    "source": [
     "import requests\n",
-    "url = \"https://section.blog.naver.com/Search/Post.naver?pageNo=1&rangeType=ALL&orderBy=sim&keyword=%ED%8C%8C%EC%9D%B4%EC%8D%AC\"\n",
+    "# url = \"https://section.blog.naver.com/Search/Post.naver?pageNo=1&rangeType=ALL&orderBy=sim&keyword=%ED%8C%8C%EC%9D%B4%EC%8D%AC\"\n",
+    "# pageNo=1&rangeType=ALL&orderBy=sim&keyword=%ED%8C%8C%EC%9D%B4%EC%8D%AC\"\n",
     "\n",
     "params = {\n",
     "    'pageNo' : 1,\n",
@@ -2234,7 +2235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 웹 스크래핑 - beautifulsoup (다음주 비대면 수업)\n",
+    "## 3.3 웹 스크래핑 - beautifulsoup (다음주4/10일 비대면 수업)\n",
     "* 웹 페이지 정보 추출하기 - beautifulsoup 사용법 \n",
     "  * soup.select_one()\n",
     "  * soup.select()\n",
@@ -2246,7 +2247,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [문제] 네이버 지식iN의 검색어 관련 검색 결과 제목 가져오기"
+    "### [문제] 네이버 지식iN의 검색어 관련 검색 결과 제목 가져오기\n",
+    "* 타겟 웹 사이트 : https://kin.naver.com/search/list.naver?query=%ED%8C%8C%EC%9D%B4%EC%8D%AC\n",
+    "* soup.select_one()\n",
+    "* soup.select()\n",
+    "* 개발자 도구를 이용"
    ]
   },
   {
@@ -2276,21 +2281,29 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
+    "# 1. 타겟 웹 사이트\n",
+    "https://kin.naver.com/search/list.naver?query=%ED%8C%8C%EC%9D%B4%EC%8D%AC\n",
     "url = 'https://kin.naver.com/search/list.naver?query=%ED%8C%8C%EC%9D%B4%EC%8D%AC'\n",
     "\n",
+    "# 2. 웹 페이지 로딩\n",
     "response = requests.get(url)\n",
     "\n",
     "if response.status_code == 200:\n",
+    "    # 웹 페이지 확인\n",
     "    html = response.text\n",
-    "    # html -> beautifulsoup 객체로 변환\n",
+    "    # 4. html -> beautifulsoup 객체로 변환 : 원하는 데이터을 쉽게 추출\n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "    # 제목 한개 선택하여 텍스트 가져오기\n",
+    "    # 5. 데이터 추출 : 첫 번째 제목 선택하여 가져오기\n",
     "    title = soup.select_one('#s_content > div.section > ul > li:nth-child(1) > dl > dt > a')\n",
-    "    print(title.get_text())\n",
+    "    # print(title)   \n",
+    "    # print(title.get_text())\n",
     "\n",
-    "    # 제목 여러 개 선택하여 텍스트 리스트 가져오기\n",
+    "    # 6. 데이터 추출 : 제목 여러 개 선택하여 리스트 구조 가져오기\n",
     "    titles = soup.select('#s_content > div.section > ul > li:nth-child(n) > dl > dt > a')\n",
+    "    # print(titles)\n",
+    "\n",
+    "    # 7. 제목의 텍스트을 반복적으로 적용하여 가져오기\n",
     "    for title in titles:\n",
     "        print(title.get_text())\n",
     "else : \n",
@@ -2303,6 +2316,7 @@
    "metadata": {},
    "source": [
     "## 3.4 웹 스크래핑 - Selenium을 이용하여 사이트 자동화하기\n",
+    "* https://selenium-python.readthedocs.io/\n",
     "* selenium 사용법\n",
     "  1. 시스템의 OS 및 Chrome 브라우저의 버전 확인\n",
     "  2. Chrome 드라이버 다운로드 및 설치\n",
@@ -2318,7 +2332,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [예제]"
+    "### [예제] Selenium을 이요하여 자동으로 타겟 웹 사이트 실행하기\n",
+    "* 타겟 사이트 : https://www.google.com"
    ]
   },
   {
@@ -2366,18 +2381,23 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "# Chrome 브라우저 실행\n",
-    "driver = webdriver.Chrome()\n",
-    "# 웹페이지 열기\n",
+    "# 1. Chrome 브라우저 실행\n",
+    "driver = webdriver.Chrome() # 크롬 드라이버 실행파일의 위치 - 작업디렉터리\n",
+    "# 2. 타겟 웹페이지 로딩\n",
     "url = \"httpss://www.google.com\"\n",
-    "driver.get(url)"
+    "driver.get(url)\n",
+    "# 3. 타겟 브라우저 종료\n",
+    "driver.quit()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [문제]\n"
+    "### [문제] Selenium을 이용하여 자동으로 타겟 웹 사이트 실행하기/검색하기/검색 결과 출력하기\n",
+    "* 타겟 사이트: https://google.com\n",
+    "* driver.find_element\n",
+    "* send_keys()"
    ]
   },
   {
@@ -2422,41 +2442,50 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "import time\n",
     "\n",
-    "# Chrome 브라우저 실행\n",
+    "# 1. Chrome 브라우저 실행\n",
     "driver = webdriver.Chrome()\n",
     "\n",
-    "# Google 홈페이지 열기\n",
+    "# 2. 타겟 Google 홈페이지 열기\n",
     "url = \"https://www.google.com\"\n",
     "driver.get(url)\n",
     "\n",
-    "# 페이지가 완전히 로드될 때까지 2초 대기\n",
-    "time.sleep(5)\n",
+    "# 3. 페이지가 완전히 로드될 때까지 2초 대기\n",
+    "time.sleep(2)\n",
     "\n",
+    "# 4. 검색 기능 - 검색창-> 검색어 입력 -> 엔터 키로 클릭 처리\n",
     "try:\n",
-    "    # 검색 상자 요소 찾기\n",
-    "    search_box = driver.find_element(By.NAME, \"q\")\n",
+    "    # 4-1 검색 상자 요소 찾기\n",
+    "    search_box = driver.find_element(By.NAME, \"q\") \n",
     "\n",
-    "    # 검색어 입력\n",
+    "    # 4-2 검색어 입력\n",
     "    search_query = \"OpenAI\"\n",
     "    search_box.send_keys(search_query)\n",
     "\n",
-    "    # Enter 키를 눌러 검색 수행\n",
+    "    # 4-3 Enter 키를 눌러 검색 수행\n",
     "    search_box.send_keys(Keys.RETURN)\n",
     "\n",
     "    # 검색 결과가 로드될 때까지 5초 대기\n",
     "    time.sleep(5)\n",
     "\n",
-    "    # 검색 결과 추출\n",
+    "    # 5. 검색 관련된 결과 추출\n",
     "    search_results = driver.find_elements(By.CSS_SELECTOR, \"div.g\")\n",
+    "    print(search_results)\n",
     "\n",
-    "    # 검색 결과의 제목과 URL 인쇄\n",
+    "    # # 5-1 첫 번째 제목과 링크 url 추출\n",
+    "    # search_results = driver.find_elements(By.CSS_SELECTOR, \"div.g\")\n",
+    "    # title = search_results[0].find_element(By.CSS_SELECTOR, \"h3\").text\n",
+    "    # url = search_results[0].find_element(By.CSS_SELECTOR, \"a\").get_attribute(\"href\")\n",
+    "    #     print(\"제목:\", title)\n",
+    "    #     print(\"URL:\", url)\n",
+    "        \n",
+    "\n",
+    "    # 5-2 검색 결과의 제목과 URL 인쇄\n",
     "    for result in search_results:\n",
     "        title = result.find_element(By.CSS_SELECTOR, \"h3\").text\n",
     "        url = result.find_element(By.CSS_SELECTOR, \"a\").get_attribute(\"href\")\n",
     "        print(\"제목:\", title)\n",
     "        print(\"URL:\", url)\n",
-    "        print()\n",
-    "\n",
+    "        \n",
     "except Exception as e:\n",
     "    print(\"오류가 발생했습니다:\", e)\n",
     "\n",
@@ -2464,6 +2493,78 @@
     "    # 브라우저 창 닫기\n",
     "    driver.quit()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [문제] Selenium을 이용하여 네이버 증권 웹페이지 열기/ 삼성전자 일별 시세 HTML가져오기/ 10페이지 내역 테이블 데이터 찾기/ 검색 결과를 데이터프레임으로 변환/저장하기\n",
+    "* 타겟 사이트:https://finance.naver.com/item/sise.naver?code=005930"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from bs4 import BeautifulSoup\n",
+    "import padas as pd\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. 크롬 드라이버 실행\n",
+    "driver= webdriver.Chrom()\n",
+    "\n",
+    "#2페이지 로딩 시간\n",
+    "time.sleep(2)\n",
+    "\n",
+    "# 3. 크롤링 사이트 : 삼성전자의 일별 시세 페이지 URL찾기\n",
+    "samsung_url =\"https://finance.naver.com/item/sise_day.naver?code=005930&page=\" #base url\n",
+    "\n",
+    "# 4. 첫 페이지부터 10 페이지까지 테이블 담기\n",
+    "samsung_daily_kospi = [] # 리스트 선언\n",
+    "for num in range(1,4):\n",
+    "    full_url = samsung_url + str(num)\n",
+    "    # 4.1 해당 페이지 요청\n",
+    "    driver.get(full_url)\n",
+    "\n",
+    "    try:\n",
+    "        # 4.2 페이지의 HTML 가져오기\n",
+    "        html = driver.page_source\n",
+    "        df = pd.read_html(html) # 테이블 구조 -> 데이터프레임\n",
+    "        # 4.3 결측치 처리 - 조건 색인을 이용한 불리언 인덱싱\n",
+    "        ## 조건 색인 인덱싱\n",
+    "        cond = df[0]['날짜'].notnull()\n",
+    "        samsung_day = df[0][cond]\n",
+    "        ## 리스트에 담기\n",
+    "        samsung_daily_kospi.append(samsung_day)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"Network Error\",e)\n",
+    "\n",
+    "    finally: \n",
+    "        driver.quit()\n",
+    "\n",
+    "print(samsung_daily_kospi)\n",
+    "samsung_daily_kospi_all = pd.concat(samsung_daily_kospi) # 데이터프레임 합치기\n",
+    "print(samsung_daily_kospi_all.head())\n",
+    "# samsung_daily_kospi_all.to_csv(\"examples/samsung_daily_kospi_2024_2020.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
