Update : ch05_update_class.ipynb v1

--- a/ch05_update1_class.ipynb
+++ b/ch05_update1_class.ipynb
@@ -5476,7 +5476,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "obj = pd.Series(np.arange(4.), index=[\"a\", \"b\", \"c\", \"d\"])\n",
+    "obj\n",
+    "obj[\"b\"]\n",
+    "obj[1]\n",
+    "obj[2:4]\n",
+    "obj[[\"b\", \"a\", \"d\"]]\n",
+    "obj[[1, 3]]\n",
+    "obj[obj < 2]"
+   ]
   },
   {
    "cell_type": "code",
