Update : ch05_update_class.ipynb v1

--- a/ch05_update1_class.ipynb
+++ b/ch05_update1_class.ipynb
@@ -4597,10 +4597,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Year  pop poplevel\n",
+      "0  2015  2.3      low\n",
+      "1  2016  2.7     high\n",
+      "2  2017  2.8     high\n",
+      "3  2018  2.4      low\n",
+      "4  2019  2.9     high\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 샘플 데이터프레임 생성\n",
+    "data = {\n",
+    "    'Year': [2015, 2016, 2017, 2018, 2019],\n",
+    "    'pop': [2.3, 2.7, 2.8, 2.4, 2.9]\n",
+    "}\n",
+    "\n",
+    "# 데이터프레임 생성\n",
+    "frame2 = pd.DataFrame(data)\n",
+    "\n",
+    "# poplevel 컬럼 추가\n",
+    "frame2['poplevel'] = frame2['pop'].apply(lambda x: 'high' if x >= 2.5 else 'low')\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(frame2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
